--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,9 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 body{
+  scroll-behavior:'smooth'!important;
     background-color:  #010409 ;
+
+  transition: opacity 0.3s ease-in-out, transform 0.5s ease;
 }
+html {
+  scroll-behavior: smooth;
+  transition: opacity 0.4s ease-in-out, transform 0.5s ease;
+
+}
+
 .custom-cursor {
     position: fixed;
     width: 40px;
