--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,6 +33,9 @@ html {
       @apply py-4 px-4 bg-secondary hover:bg-opacity-70 rounded-[30px] text-white text-lg font-semibold;
     }
   
+    .heroTitle{
+      @apply text-white text-[32px] md:text-[60px] lg:text-[96px]  z-10  font-semibold
+    }
     .head-text {
       @apply mt-4 text-4xl leading-[40px] uppercase font-semibold tracking-[-1.2px] text-gray-100;
     }
