--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,19 +37,19 @@ html {
       @apply text-white text-[32px] md:text-[60px] lg:text-[96px]  z-10  font-semibold
     }
     .head-text {
-      @apply mt-4 text-4xl leading-[40px] uppercase font-semibold tracking-[-1.2px] text-gray-100;
+      @apply mt-4 text-2xl md:text-4xl leading-[24px] md:leading-[40px] uppercase font-semibold tracking-[-1.2px] text-gray-100;
     }
   
     .Secordary-Title {
-      @apply mt-4 text-[24px] leading-[26px] uppercase font-semibold tracking-[-1.2px] text-gray-100;
+      @apply mt-4 text-[18px] lg:text-[24px] leading-[20px] lg:leading-[26px] uppercase font-semibold tracking-[-1.2px] text-gray-100;
     }
   
     .subtitle {
-      @apply  text-[20px] py-2 font-medium text-gray-200;
+      @apply  text-[12px] lg:text-[20px] py-2 font-medium text-gray-200;
     }
   
     .small-text {
-      @apply flex gap-2 text-sm font-medium text-gray-300;
+      @apply flex gap-2 text-xs lg:text-sm md:font-medium text-gray-300;
     }
     
   }
