--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,6 +12,13 @@ body{
 
   transition: opacity 0.3s ease-in-out, transform 0.5s ease;
 }
+
+.fira_code_font{
+  font-family: "Source Code Pro", monospace;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 html {
   scroll-behavior: smooth;
   transition: opacity 0.4s ease-in-out, transform 0.5s ease;
@@ -53,3 +62,59 @@ html {
     }
     
   }
+
+  @keyframes glowMove {
+    0% {
+      transform: translateY(0px) rotate(0deg);
+      opacity: 0.8;
+    }
+    25% {
+      transform: translateY(-15px) rotate(15deg);
+      opacity: 1;
+    }
+    50% {
+      transform: translateY(0px) rotate(30deg);
+      opacity: 0.9;
+    }
+    75% {
+      transform: translateY(15px) rotate(15deg);
+      opacity: 1;
+    }
+    100% {
+      transform: translateY(0px) rotate(0deg);
+      opacity: 0.8;
+    }
+  }
+  
+  @keyframes glowMoveAlt {
+    0% {
+      transform: translateY(0px) rotate(0deg);
+      opacity: 0.6;
+    }
+    25% {
+      transform: translateY(20px) rotate(-20deg);
+      opacity: 1;
+    }
+    50% {
+      transform: translateY(0px) rotate(-40deg);
+      opacity: 0.8;
+    }
+    75% {
+      transform: translateY(-20px) rotate(-20deg);
+      opacity: 1;
+    }
+    100% {
+      transform: translateY(0px) rotate(0deg);
+      opacity: 0.6;
+    }
+  }
+  
+  /* Applying animations */
+  .animate-glow {
+    animation: glowMove 8s infinite ease-in-out;
+  }
+  
+  .animate-glow-alt {
+    animation: glowMoveAlt 10s infinite ease-in-out;
+  }
+  
